Revision history for Perl extension Daje-Database-Model

{{$NEXT}}

    - 2025-10-04 Bug fix
    - original version
