@@ -1,5 +1,5 @@
 package Daje::Database::Model::Super::Common::Base;
-use Mojo::Base -base, -signatures;
+use Mojo::Base 'Daje::Database::Model::Super::Common::Defaults', -base, -signatures;
 use v5.40;
 
 # Autogenerated class Thu Jun 26 17:06:45 2025
@@ -121,6 +121,7 @@ sub insert($self, $table, $data, $primary_key_name) {
 
 sub update($self, $table, $data, $keys) {
     my $result->{result} = 1;
+    $data = $self->update_defaults($data);
     try {
         $self->db->update($table, $data, $keys);
     } catch($e) {
