@@ -2,6 +2,7 @@ Revision history for Perl extension Daje-Database-Model
 
 {{$NEXT}}
 
+    - 2025-10-04 Base class for defaults added
     - 2025-10-04 Bug fix
     - original version
 
